# ws_parser

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: integration.yaml
my_parser/: broker_consumer.py  broker_producer.py  database.py  main.py  parser.py  schemas.py  tasks.py
my_parser/api/: handlers.py  router.py
