[tool.poetry]
name = "my-parser"
version = "0.1.0"
description = "Backend for developer"
authors = ["matvey tulaev"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
pymongo = "^4.6.1"
uvicorn = "^0.25.0"
motor = "^3.3.2"
httpx = "^0.26.0"
pydantic = {extras = ["dotenv"], version = "^2.5.3"}
python-dotenv = "^1.0.0"
aiokafka = "^0.10.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

